edit: adjust scanpath clasisfication to more interpretable results: only leave tree classifier, implement visualization of trees. edit(tex): toggling section finished, strategy section add scanpath classification

--- a/analysis/scanpath_classification/strategy_classification.ipynb
+++ b/analysis/scanpath_classification/strategy_classification.ipynb
@@ -9,31 +9,23 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
     "from MarkovModels.MarkovModelConstructor import MarkovModelConstructor\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neural_network import MLPClassifier"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, train_test_split\n",
+    "\n",
+    "from sklearn.tree import export_text\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4179fa4b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(path)\n\u001b[1;32m      3\u001b[0m states \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msent_msg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrgt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcomp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdist\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mav_msgs\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m keep_non_aoi \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_fixations.csv\"\n",
     "df = pd.read_csv(path)\n",
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "b4ce4a0f",
    "metadata": {},
    "outputs": [],
@@ -61,24 +53,43 @@
     "    X = df[features].to_numpy()\n",
     "    y = df[target].to_numpy()\n",
     "    \n",
-    "    # Split the data into training and testing sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "    model.fit(X_train, y_train)\n",
+    "    # perform cv to estimate performance better \n",
+    "\n",
+    "    param_grid = {\n",
+    "        \"max_depth\": [3, 4],\n",
+    "        \"min_samples_split\": [10, 15, 20],\n",
+    "        \"min_samples_leaf\": [5, 10, 15],\n",
+    "        \"ccp_alpha\": [0.0001, 0.005, 0.01],\n",
+    "        \"max_features\": [None]\n",
+    "    }\n",
+    "\n",
     "    \n",
-    "    # Evaluate the model\n",
-    "    conf_matrix = pd.crosstab(y_test, model.predict(X_test), rownames=['Actual'], colnames=['Predicted'])\n",
-    "    f1 = f1_score(model.predict(X_test), y_test, average='micro')\n",
-    "    print(f\"Model: {model.__class__.__name__}, Accuracy: {f1:.2f}\")\n",
-    "    print(\"Confusion Matrix:\")\n",
-    "    print(conf_matrix)\n",
-    "    \n",
-    "    return model\n"
+    "    from sklearn.model_selection import GridSearchCV\n",
+    "    grid_search = GridSearchCV(model, param_grid, cv=5, scoring='f1_weighted', n_jobs=-1)\n",
+    "    grid_search.fit(X, y)\n",
+    "    print(f\"Best parameters: {grid_search.best_params_}\")\n",
+    "    print(f\"Best score: {grid_search.best_score_:.2f}\")\n",
+    "    model = grid_search.best_estimator_\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "def visualize_tree_classifier(model, feature_names):\n",
+    "    from sklearn.tree import export_graphviz\n",
+    "    import graphviz\n",
+    "\n",
+    "    dot_data = export_graphviz(model, out_file=None, \n",
+    "                               feature_names=feature_names,  \n",
+    "                               class_names=list(map(str, model.classes_)),  \n",
+    "                               filled=True, rounded=True,  \n",
+    "                               special_characters=True)  \n",
+    "    graph = graphviz.Source(dot_data)  \n",
+    "    return graph\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "970631e2",
    "metadata": {},
    "outputs": [
@@ -86,45 +97,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['StrategyLabel', 'TrgtPos', 'sent_msg_to_sent_msg', 'sent_msg_to_trgt',\n",
-      "       'sent_msg_to_comp', 'sent_msg_to_dist', 'sent_msg_to_av_msgs',\n",
-      "       'trgt_to_sent_msg', 'trgt_to_trgt', 'trgt_to_comp', 'trgt_to_dist',\n",
-      "       'trgt_to_av_msgs', 'comp_to_sent_msg', 'comp_to_trgt', 'comp_to_comp',\n",
-      "       'comp_to_dist', 'comp_to_av_msgs', 'dist_to_sent_msg', 'dist_to_trgt',\n",
-      "       'dist_to_comp', 'dist_to_dist', 'dist_to_av_msgs',\n",
-      "       'av_msgs_to_sent_msg', 'av_msgs_to_trgt', 'av_msgs_to_comp',\n",
-      "       'av_msgs_to_dist', 'av_msgs_to_av_msgs', 'Condition_simple',\n",
-      "       'Condition_unambiguous', 'MsgType_shape'],\n",
+      "Index(['StrategyLabel', 'TrgtPos', 'MsgType', 'sent_msg_to_sent_msg',\n",
+      "       'sent_msg_to_trgt', 'sent_msg_to_comp', 'sent_msg_to_dist',\n",
+      "       'sent_msg_to_av_msgs', 'trgt_to_sent_msg', 'trgt_to_trgt',\n",
+      "       'trgt_to_comp', 'trgt_to_dist', 'trgt_to_av_msgs', 'comp_to_sent_msg',\n",
+      "       'comp_to_trgt', 'comp_to_comp', 'comp_to_dist', 'comp_to_av_msgs',\n",
+      "       'dist_to_sent_msg', 'dist_to_trgt', 'dist_to_comp', 'dist_to_dist',\n",
+      "       'dist_to_av_msgs', 'av_msgs_to_sent_msg', 'av_msgs_to_trgt',\n",
+      "       'av_msgs_to_comp', 'av_msgs_to_dist', 'av_msgs_to_av_msgs'],\n",
       "      dtype='object')\n",
-      "Model: RandomForestClassifier, Accuracy: 0.38\n",
-      "Confusion Matrix:\n",
-      "Predicted   0  1   2\n",
-      "Actual              \n",
-      "0           3  6  11\n",
-      "1           1  1   5\n",
-      "2          11  4  19\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.56\n",
-      "Confusion Matrix:\n",
-      "Predicted  1   2\n",
-      "Actual          \n",
-      "0          2  18\n",
-      "1          0   7\n",
-      "2          0  34\n",
-      "Model: MLPClassifier, Accuracy: 0.62\n",
-      "Confusion Matrix:\n",
-      "Predicted  0  1   2\n",
-      "Actual             \n",
-      "0          8  3   9\n",
-      "1          0  1   6\n",
-      "2          4  1  29\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gatemrou/venvs/ml2024/lib/python3.12/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "Processing condition: simple\n",
+      "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 4, 'max_features': None, 'min_samples_leaf': 15, 'min_samples_split': 10}\n",
+      "Best score: 0.47\n",
+      "Processing condition: complex\n",
+      "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 4, 'max_features': None, 'min_samples_leaf': 10, 'min_samples_split': 10}\n",
+      "Best score: 0.51\n"
      ]
     }
    ],
@@ -139,24 +126,27 @@
     "save_path = '/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/markov_models'\n",
     "df = MarkovModelConstr.create_markov_models(df, states, include_non_aoi=False, save=False, explode=True, per='participant')\n",
     "assert df is not None, \"DataFrame should not be None after Markov Model construction\"\n",
-    "# only keep simple condition\n",
-    "df = pd.get_dummies(df, columns=['Condition'], drop_first=True)\n",
-    "df = pd.get_dummies(df, columns=['MsgType'], drop_first=True)\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "target = 'StrategyLabel'\n",
     "df.drop(columns=['Scanpath', 'TransitionMatrix', 'Subject', 'Correct'], inplace=True)\n",
-    "print(df.columns)\n",
-    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini', class_weight='balanced')\n",
-    "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
-    "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
-    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
-    "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42)\n",
-    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+    "target = 'StrategyLabel'\n",
+    "print(df.columns.drop('Condition'))\n",
+    "\n",
+    "for condition in ['simple', 'complex']:\n",
+    "    print(f\"Processing condition: {condition}\")\n",
+    "    df_condition = df[df['Condition'] == condition]\n",
+    "    df_condition = df_condition.drop(columns=['Condition'])\n",
+    "    df_condition = pd.get_dummies(df_condition, columns=['MsgType'], drop_first=True)\n",
+    "\n",
+    "    scanp_model_tree = DecisionTreeClassifier(random_state=42, criterion='gini', class_weight='balanced', max_depth=3, ccp_alpha=0.001)\n",
+    "    scanp_fitted_model_tree = fit_classifier(df_condition, scanp_model_tree, target)\n",
+    "\n",
+    "    graph = visualize_tree_classifier(scanp_fitted_model_tree, feature_names=list(df_condition.columns.drop(target)))\n",
+    "    graph.render(f\"tree_visualizations/tree_classifier_scanp_{condition}\", format='png', cleanup=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "8a3af2f7",
    "metadata": {},
    "outputs": [
@@ -164,29 +154,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features:  ['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt', 'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI', 'RateTogglingAvailableMsgs', 'MeanAnswerTime', 'AnswerAccuracy', 'Condition_simple', 'Condition_unambiguous']\n",
-      "Class weights:  {2.0: 0.5544554455445545, 0.0: 0.24752475247524752, 1.0: 0.19801980198019803}\n",
-      "Model: RandomForestClassifier, Accuracy: 0.44\n",
-      "Confusion Matrix:\n",
-      "Predicted  0.0  1.0  2.0\n",
-      "Actual                  \n",
-      "0.0          4    4    8\n",
-      "1.0          2    4    8\n",
-      "2.0          7    5   19\n",
-      "Model: KNeighborsClassifier, Accuracy: 0.46\n",
-      "Confusion Matrix:\n",
-      "Predicted  0.0  1.0  2.0\n",
-      "Actual                  \n",
-      "0.0          0    3   13\n",
-      "1.0          1    0   13\n",
-      "2.0          1    2   28\n",
-      "Model: MLPClassifier, Accuracy: 0.23\n",
-      "Confusion Matrix:\n",
-      "Predicted  1.0\n",
-      "Actual        \n",
-      "0.0         16\n",
-      "1.0         14\n",
-      "2.0         31\n"
+      "Index(['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt',\n",
+      "       'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI',\n",
+      "       'RateTogglingAvailableMsgs', 'NumTogglesAvailableMsgs', 'StrategyLabel',\n",
+      "       'MeanAnswerTime'],\n",
+      "      dtype='object')\n",
+      "Processing condition: simple\n",
+      "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 3, 'max_features': None, 'min_samples_leaf': 15, 'min_samples_split': 10}\n",
+      "Best score: 0.50\n",
+      "Processing condition: complex\n",
+      "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 3, 'max_features': None, 'min_samples_leaf': 15, 'min_samples_split': 10}\n",
+      "Best score: 0.55\n"
      ]
     }
    ],
@@ -194,25 +172,32 @@
     "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_participants.csv\"\n",
     "df = pd.read_csv(path)\n",
     "df = df[df['Condition'] != 'all']\n",
+    "df = df.drop(columns=['AnswerAccuracy', 'Subject'])\n",
     "target = 'StrategyLabel'\n",
-    "df = pd.get_dummies(df, columns=['Condition'], drop_first=True)\n",
-    "df = df.drop(columns=['Subject'])\n",
-    "print('Features: ', df.columns.drop(target).tolist())\n",
+    "print(df.columns.drop('Condition'))\n",
     "\n",
-    "class_weight = df[target].value_counts(normalize=True).to_dict()\n",
-    "print('Class weights: ', class_weight   )\n",
-    "\n",
-    "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini', class_weight='balanced')\n",
-    "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
-    "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
-    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
-    "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42, solver='adam')\n",
-    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+    "for condition in ['simple', 'complex']:\n",
+    "    print(f\"Processing condition: {condition}\")\n",
+    "    df_condition = df[df['Condition'] == condition]\n",
+    "    if df_condition.empty:\n",
+    "        print(f\"No data for condition: {condition}\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Drop unnecessary columns\n",
+    "    df_condition = df_condition.drop(columns=['Condition'])\n",
+    "    \n",
+    "    # Fit the model\n",
+    "    model_tree = DecisionTreeClassifier(random_state=42, criterion='gini', class_weight='balanced', max_depth=3, ccp_alpha=0.001)\n",
+    "    prop_fitted_model_tree = fit_classifier(df_condition, model_tree, target)\n",
+    "    \n",
+    "    # Visualize the tree classifier\n",
+    "    graph = visualize_tree_classifier(prop_fitted_model_tree, feature_names=list(df_condition.columns.drop(target)))\n",
+    "    graph.render(f\"tree_visualizations/tree_classifier_prop_{condition}\", format='png', cleanup=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "77d613b6",
    "metadata": {},
    "outputs": [
@@ -270,10 +255,10 @@
     "\n",
     "model_forest = RandomForestClassifier(n_estimators=1, random_state=42, criterion='gini')\n",
     "fitted_model_forest = fit_classifier(df, model_forest, target)\n",
-    "model_knn = KNeighborsClassifier(n_neighbors=20)\n",
-    "fitted_model_knn = fit_classifier(df, model_knn, target)\n",
-    "model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42)\n",
-    "fitted_model_nn = fit_classifier(df, model_nn, target)"
+    "# model_knn = KNeighborsClassifier(n_neighbors=20)\n",
+    "# fitted_model_knn = fit_classifier(df, model_knn, target)\n",
+    "# model_nn = MLPClassifier(hidden_layer_sizes=(100, 50), max_iter=500, random_state=42)\n",
+    "# fitted_model_nn = fit_classifier(df, model_nn, target)"
    ]
   },
   {
