add: lasso plot, partially done, widths are not aligned, colors should be adjusted. edit: tree plots have been explained in tex

--- a/analysis/scanpath_classification/strategy_classification.ipynb
+++ b/analysis/scanpath_classification/strategy_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "23e11c52",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "b4ce4a0f",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "970631e2",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "8a3af2f7",
    "metadata": {},
    "outputs": [
@@ -156,15 +156,15 @@
      "text": [
       "Index(['PropTimeOnSentMsg', 'PropTimeOnAvailableMsgs', 'PropTimeOnTrgt',\n",
       "       'PropTimeOnDist', 'PropTimeOnComp', 'PropTimeOnNonAOI',\n",
-      "       'RateTogglingAvailableMsgs', 'NumTogglesAvailableMsgs', 'StrategyLabel',\n",
-      "       'MeanAnswerTime'],\n",
+      "       'RateTogglingAvailableMsgs', 'NumTogglesAvailableMsgs',\n",
+      "       'StrategyLabel'],\n",
       "      dtype='object')\n",
       "Processing condition: simple\n",
       "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 3, 'max_features': None, 'min_samples_leaf': 15, 'min_samples_split': 10}\n",
       "Best score: 0.50\n",
       "Processing condition: complex\n",
       "Best parameters: {'ccp_alpha': 0.0001, 'max_depth': 3, 'max_features': None, 'min_samples_leaf': 15, 'min_samples_split': 10}\n",
-      "Best score: 0.55\n"
+      "Best score: 0.56\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "path = \"/home/gatemrou/uds/thesis/Thesis-Project/analysis/data/final_datasets/final_experiment_participants.csv\"\n",
     "df = pd.read_csv(path)\n",
     "df = df[df['Condition'] != 'all']\n",
-    "df = df.drop(columns=['AnswerAccuracy', 'Subject'])\n",
+    "df = df.drop(columns=['AnswerAccuracy', 'Subject', 'MeanAnswerTime'])\n",
     "target = 'StrategyLabel'\n",
     "print(df.columns.drop('Condition'))\n",
     "\n",
