edit: add todos for missing sections/paragrahs, lasso plot - done. act-r partially written.

--- a/tex/paper/sections/implementation.tex
+++ b/tex/paper/sections/implementation.tex
@@ -74,7 +74,7 @@ The participants were informed about the eye-tracking procedure at the beginning
 
 \subsection{Features}
 \label{sec:analysis:features}
-Considering the related eye-tracking study conducted by \cite{Vigneau_2006}, the analysis will be around the defined eye-tracking features. \cite{Vigneau_2006} defined mainly 5 types of features: absolute time on an area of interest, proportional time on an area of interest, toggling (between the Raven's matrix and the available messages), item latency (time to complete the trial) and latency to first toggle and matrix distribution index (how equally the attention was spread across the matrix items). In this study on the other hand, we are mainly focused on the proportional time on the areas of interest. The decision was made for multiple reasons. First of all the sampling rate of WebGazer is highly dependent on the participants' computer, making the absolute time on the areas of interest and latency to first fixation not comparable between participants. Second of all, we do not have such a strong hypothesis about what exactly people do during the task solving process as \cite{Vigneau_2006} had. We are rather interested in the general profile of attention, hence, no toggling features were included in the analysis. 
+Considering the related eye-tracking study conducted by \cite{Vigneau_2006}, the analysis will be around the defined eye-tracking features. \cite{Vigneau_2006} defined mainly 5 types of features: absolute time on an area of interest, proportional time on an area of interest, toggling (between the Raven's matrix and the available messages), item latency (time to complete the trial) and latency to first toggle and matrix distribution index (how equally the attention was spread across the matrix items). In this study on the other hand, we are mainly focused on the proportional time on the areas of interest. Along with toggling feature, these include absolute number of toggles and rate of toggling, both defined for available messages. The decision was made for multiple reasons. First of all the sampling rate of WebGazer is highly dependent on the participants' computer, making the absolute time on the areas of interest and latency to first fixation not comparable between participants. 
 
 In addition to the eye-tracking features, we included some general features about the trial. The features are: trial number, condition (Simple, Complex or Unambiguous), type of sent message feature (shape or color), correct (whether the trial was solved correctly or not) and Target position (left, center or right). The condition and correct features play crucial role in the analysis. While the other features such as trial number, type of sent message and Target position were included due to the fact that they were shown to sometimes have a significant effect on the participants' performance in the previous studies \citep{Mayn_2023, Mayn_2025}.
 
